# qipdiscovery

./: CMakeLists.txt  QIPDiscoveryConfig.cmake  README
cmake/modules/: FindMiniupnpc.cmake
inc/: qipdiscoverydebug.hh  qipdiscoverymanager.hh  qipendpoint.hh  qipendpointigdforwarding.hh  qipendpointsimple.hh
src/: qipdiscoverydebug.cc  qipdiscoverymanager.cc  qipendpoint.cc  qipendpointigdforwarding.cc  qipendpointsimple.cc
